--- a/index.css
+++ b/index.css
@@ -17,3 +17,20 @@
    border-radius: 50%;
    background-color:white;
 }
+
+.dice2{
+    padding: 4px;
+    background-color: black;
+    width: 204px;
+    height: 204px;
+    border-radius: 10%;
+}
+
+.dot2 {
+    display: flex;
+    justify-content: space-between;
+   width: 44px;
+   height: 44px;
+   border-radius: 50%;
+   background-color:white;
+}
